--- a/app/package.json
+++ b/app/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.11.6",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "prismjs": "^1.26.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-simple-code-editor": "^0.13.1",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.0"
   }
 }
