--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tonic = "0.7.1"
 tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
 prost = "0.10.1"
+tonic-reflection = "0.4.0"
 
 [build-dependencies]
 tonic-build = "0.7.2"
