--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@rainbow-me/rainbowkit": "^0.12.8",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -17,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "ethers": "^5",
     "framer-motion": "^10.11.6",
     "next": "13.3.0",
     "postcss": "8.4.21",
@@ -27,7 +29,8 @@
     "react-simple-code-editor": "^0.13.1",
     "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "wagmi": "^0.12.10"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.0"
