--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "proto": "mkdir src/proto_client && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/proto_client proto/service.proto --proto_path=../backend"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -29,6 +30,7 @@
     "react-simple-code-editor": "^0.13.1",
     "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1",
+    "ts-proto": "^1.146.0",
     "typescript": "5.0.4",
     "wagmi": "^0.12.10"
   },
