--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,8 @@
     "postcss": "8.4.21",
     "prismjs": "^1.26.0",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-simple-code-editor": "^0.13.1",
