--- a/app/package.json
+++ b/app/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "account-abstraction-builder",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "proto": "rm -rf src/proto_client/*.d.ts && mkdir -p src/proto_client && protoc -I=../backend/proto --ts_out=../app/src/proto_client --ts_opt=unary_rpc_promise=true service.proto",
-    "proto2": "$(npm bin)/proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto ../backend/proto/*.proto"
-  },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.8.14",
-    "@grpc/proto-loader": "^0.7.6",
-    "@headlessui/react": "^1.7.14",
-    "@rainbow-me/rainbowkit": "^0.12.8",
-    "@tippyjs/react": "^4.2.6",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "ethers": "^5",
-    "framer-motion": "^10.11.6",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
-    "prismjs": "^1.26.0",
-    "react": "18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-simple-code-editor": "^0.13.1",
-    "react-toastify": "^9.1.2",
-    "tailwindcss": "3.3.1",
-    "ts-proto": "^1.146.0",
-    "typescript": "5.0.4",
-    "wagmi": "^0.12.10"
-  },
-  "devDependencies": {
-    "@types/prismjs": "^1.26.0"
-  }
+	"name": "account-abstraction-builder",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"proto": "rm -rf src/proto_client/*.d.ts && mkdir -p src/proto_client && protoc -I=../backend/proto --ts_out=../app/src/proto_client --ts_opt=unary_rpc_promise=true service.proto",
+		"proto2": "$(npm bin)/proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto ../backend/proto/*.proto"
+	},
+	"dependencies": {
+		"@grpc/grpc-js": "^1.8.14",
+		"@grpc/proto-loader": "^0.7.6",
+		"@headlessui/react": "^1.7.14",
+		"@rainbow-me/rainbowkit": "^0.12.8",
+		"@tippyjs/react": "^4.2.6",
+		"@types/node": "18.15.11",
+		"@types/react": "18.0.35",
+		"@types/react-dom": "18.0.11",
+		"autoprefixer": "10.4.14",
+		"classnames": "^2.3.2",
+		"eslint": "8.38.0",
+		"eslint-config-next": "13.3.0",
+		"ethers": "^5",
+		"framer-motion": "^10.11.6",
+		"immutability-helper": "^3.1.1",
+		"next": "13.3.0",
+		"postcss": "8.4.21",
+		"prismjs": "^1.26.0",
+		"react": "18.2.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0",
+		"react-simple-code-editor": "^0.13.1",
+		"react-toastify": "^9.1.2",
+		"tailwindcss": "3.3.1",
+		"ts-proto": "^1.146.0",
+		"typescript": "5.0.4",
+		"uuid": "^9.0.0",
+		"wagmi": "^0.12.10"
+	},
+	"devDependencies": {
+		"@types/prismjs": "^1.26.0",
+		"@types/react-beautiful-dnd": "^13.1.4"
+	}
 }
