--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,13 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tonic = "0.7.1"
 tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
-prost = "0.10.1"
-tonic-reflection = "0.4.0"
-ethers-solc = "2.0.3"
 serde_json = "1.0.96"
 serde = "1.0.160"
-
-[build-dependencies]
-tonic-build = "0.7.2"
+tide = "0.16.0"
